RESOLVED FIXED139215
Fix build break EFL port since r176696
https://bugs.webkit.org/show_bug.cgi?id=139215
Summary Fix build break EFL port since r176696
Gyuyoung Kim
Reported 2014-12-02 17:46:51 PST
WebKit EFL build is broken since r176696. In file included from ../../Source/WebCore/page/DOMWindow.cpp:95:0: ../../Source/WebCore/storage/StorageNamespaceProvider.h:29:40: fatal error: WebCore/SecurityOriginHash.h: No such file or directory #include <WebCore/SecurityOriginHash.h>
Attachments
Patch (1.28 KB, patch)
2014-12-02 17:49 PST, Gyuyoung Kim
no flags
Gyuyoung Kim
Comment 1 2014-12-02 17:49:57 PST
Gyuyoung Kim
Comment 2 2014-12-02 19:16:30 PST
Note You need to log in before you can comment on or make changes to this bug.