Fix build break EFL port since r176696 https://bugs.webkit.org/show_bug.cgi?id=139215

Unreviewed, build fix for EFL port.

* storage/StorageNamespaceProvider.h: Include SecurityOriginHash.h from WebCore/page directory.

Canonical link: https://commits.webkit.org/157055@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176708 268f45cc-cd09-0410-ab3c-d52691b4dbfc